--- a/HW2/hw2_yiran.lyx
+++ b/HW2/hw2_yiran.lyx
@@ -184,10 +184,28 @@ The standard result only gives the diagonal term in the model covariance
 
 \begin_layout Standard
 The L2 and L1 (grid search) method is more straighforward in showing the
- error distribution in the model space, and the correlation between model
- parameters.
- The least-square solution is fast, and gives the exact solution that minimizes
+ error distribution, and the correlation between model parameters.
+ 
+\begin_inset Newline newline
+\end_inset
+
+The least-square solution is fast, and gives the exact solution that minimizes
  L2 norm error.
+ We can infer some information, such as the correlations between the model
+ parameters, from its output matrices.
+ However, it is not as straightforward.
+ In this small size problem, I would prefer the direct search method.
+\begin_inset Newline newline
+\end_inset
+
+In this problem, we see that the data points are quite close to a line,
+ so we speculate that the errors are small.
+ However, if the points are more scattered as the errors are getting bigger,
+ the L1 norm method can be better, because it would be less likely to be
+ affected by the outliers.
+ If there are several solutions that can minimize the error equally well,
+ we can see it in the error map produced by the direct search method, and
+ can choose one solution based on some priori information.
 \end_layout
 
 \end_body
