--- a/HW2/hw2_yiran.tex
+++ b/HW2/hw2_yiran.tex
@@ -14,7 +14,22 @@
 
 \usepackage{babel}
 \begin{document}
-
+\lstset{language=Matlab,%
+	  %basicstyle=\color{red},
+  breaklines=true,%
+  morekeywords={matlab2tikz},
+  keywordstyle=\color{blue},%
+  morekeywords=[2]{1}, keywordstyle=[2]{\color{black}},
+  identifierstyle=\color{black},%
+  stringstyle=\color{mylilas},
+  commentstyle=\color{mygreen},%
+  showstringspaces=false,%without this there will be a symbol in the places where there is a space
+  numbers=left,%
+  numberstyle={\tiny \color{black}},% size of the numbers
+  numbersep=9pt, % this defines how far the numbers are from the text
+  emph=[1]{for,end,break},emphstyle=[1]\color{red}, %some words to emphasise
+													  %emph=[2]{word1,word2}, emphstyle=[2]{style},    
+}
 \section*{Problem 1}
 
 
@@ -93,7 +108,8 @@ sym &  & 15Pz_{s}^{3}-9Pz_{s}R_{i} & R_{i}^{2}-9z_{s}^{2}R_{i}\\
 \]
 
 
-(c)\include{compute_gradient_approx_hess}
+\lstinputlisting{compute_gradient_approx_hess.m}
+
 
 
 \section*{Problem 2}
