--- a/HW2/hw2_yiran.tex
+++ b/HW2/hw2_yiran.tex
@@ -1,22 +1,20 @@
-%% LyX 2.1.3 created this file.  For more info, see http://www.lyx.org/.
+%% LyX 2.0.5 created this file.  For more info, see http://www.lyx.org/.
 %% Do not edit unless you really know what you are doing.
-\documentclass[12pt,english]{article}
+\documentclass[8pt]{article}
 \usepackage[latin9]{inputenc}
-\usepackage{amsthm}
-\usepackage{amsmath}
 \usepackage{listings}
+\usepackage{amsmath}
+\usepackage{amssymb}
+\usepackage{color}
 \makeatletter
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Textclass specific LaTeX commands.
-\numberwithin{equation}{section}
-\numberwithin{figure}{section}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% User specified LaTeX commands.
+\usepackage[english]{babel}
 
 \makeatother
 
-\usepackage{babel}
-
-
-
 \begin{document}
+
+
 \lstset{language=Matlab,%
 	  %basicstyle=\color{red},
   breaklines=true,%
@@ -25,7 +23,7 @@
   morekeywords=[2]{1}, keywordstyle=[2]{\color{black}},
   identifierstyle=\color{black},%
   stringstyle=\color{mylilas},
-  commentstyle=\color{mygreen},%
+  commentstyle=\color{green},%
   showstringspaces=false,%without this there will be a symbol in the places where there is a space
   numbers=left,%
   numberstyle={\tiny \color{black}},% size of the numbers
@@ -33,6 +31,7 @@
   emph=[1]{for,end,break},emphstyle=[1]\color{red}, %some words to emphasise
 													  %emph=[2]{word1,word2}, emphstyle=[2]{style},    
 }
+
 \section*{Problem 1}
 
 
@@ -56,12 +55,12 @@ define :
 \[
 R_{i}=(x_{s}-x_{i})^{2}+(y_{s}-y_{i})^{2}+z_{s}^{2}
 \]
- 
+
 
 \[
 lx_{i}=x_{i}-x_{s}
 \]
- 
+
 
 \[
 ly_{i}=y_{i}-y_{s}
@@ -77,7 +76,8 @@ We write the Jacobian matrix:
 \[
 \boldsymbol{J}=\boldsymbol{\nabla}_{\boldsymbol{m}}G=\frac{\partial G_{i}}{\partial m_{j}}
 \]
- 
+
+
 \[
 \boldsymbol{J}=\begin{bmatrix}\frac{3Pz_{x}lx_{1}}{2R_{1}^{5/2}} & \frac{3Pz_{x}ly_{1}}{2R_{1}^{5/2}} & \frac{PR_{1}-3Pz_{s}^{2}}{2R_{1}^{5/2}} & \frac{z_{s}}{2R_{1}^{3/2}}\\
 \frac{3Pz_{x}lx_{2}}{2R_{2}^{5/2}} & \frac{3Pz_{x}ly_{2}}{2R_{2}^{5/2}} & \frac{PR_{2}-3Pz_{s}^{2}}{2R_{2}^{5/2}} & \frac{z_{s}}{2R_{2}^{3/2}}\\
@@ -111,10 +111,7 @@ sym &  & 15Pz_{s}^{3}-9Pz_{s}R_{i} & R_{i}^{2}-9z_{s}^{2}R_{i}\\
 \]
 
 
-
-
 \lstinputlisting{hw2q1.m}
-
 
 
 \section*{Problem 2}
@@ -129,9 +126,9 @@ Fig. 1 shows the $(x,y)$ points.
 
 $m_{1}$ is the intercept with the $y$ axis, we estimate from the
 plot that it should be bounded by $[-150,0]$. \\
-$m_{2}$ is the slope of the line, we estimate from the plot that
+ $m_{2}$ is the slope of the line, we estimate from the plot that
 it should be bounded by $[1,10]$. \\
-We can start with a larger model space, and do a coarse search with
+ We can start with a larger model space, and do a coarse search with
 $m1=[-150:0.1:0]$, and $m2=[1:0.01:10]$. If needed, we can shrink
 our model space and do a finer search as a second step.
 
@@ -166,17 +163,16 @@ this problem.
 The L2 and L1 (grid search) method is more straighforward in showing
 the error distribution, and the correlation between model parameters.
 \\
-The least-square solution is fast, and gives the exact solution that
+ The least-square solution is fast, and gives the exact solution that
 minimizes L2 norm error. We can infer some information, such as the
 correlations between the model parameters, from its output matrices.
 However, it is not as straightforward. In this small size problem,
 I would prefer the direct search method.\\
-In this problem, we see that the data points are quite close to a
+ In this problem, we see that the data points are quite close to a
 line, so we speculate that the errors are small. However, if the points
 are more scattered as the errors are getting bigger, the L1 norm method
 can be better, because it would be less likely to be affected by the
 outliers. If there are several solutions that can minimize the error
 equally well, we can see it in the error map produced by the direct
 search method, and can choose one solution based on some priori information.
-
 \end{document}
