--- a/HW2/hw2_solutions.lyx
+++ b/HW2/hw2_solutions.lyx
@@ -233,6 +233,13 @@ sym &  & 15Pz_{s}^{3}-9Pz_{s}R_{i} & R_{i}^{2}-9z_{s}^{2}R_{i}\\
 
 \begin_layout Standard
 (c)
+\begin_inset CommandInset include
+LatexCommand include
+filename "compute_gradient_approx_hess.m"
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section*
@@ -344,26 +351,56 @@ The standard result only gives the diagonal term in the model covariance
 \end_layout
 
 \begin_layout Standard
-The L2 and L1 (grid search) method is more straighforward in showing the
- error distribution, and the correlation between model parameters.
+The L1 and L2 methods (
+\begin_inset Quotes eld
+\end_inset
+
+grid search
+\begin_inset Quotes erd
+\end_inset
+
+) are more straighforward in showing the error distribution, thus the probabilit
+y of the model parameters over the 
+\begin_inset Quotes eld
+\end_inset
+
+full
+\begin_inset Quotes erd
+\end_inset
+
+ model space.
+ The correlations between model parameters are also clear.
  
 \begin_inset Newline newline
 \end_inset
 
-The least-square solution is fast, and gives the exact solution that minimizes
- L2 norm error.
+The least-square solution (
+\begin_inset Quotes eld
+\end_inset
+
+direct inversion
+\begin_inset Quotes erd
+\end_inset
+
+) is fast, and gives the exact solution that minimizes L2 norm error.
  We can infer some information, such as the correlations between the model
  parameters, from its output matrices.
  However, it is not as straightforward.
- In this small size problem, I would prefer the direct search method.
+ In this small size problem, I would prefer the 
+\begin_inset Quotes eld
+\end_inset
+
+grid search
+\begin_inset Quotes erd
+\end_inset
+
+ method.
 \begin_inset Newline newline
 \end_inset
 
-In this problem, we see that the data points are quite close to a line,
- so we speculate that the errors are small.
- However, if the points are more scattered as the errors are getting bigger,
- the L1 norm method can be better, because it would be less likely to be
- affected by the outliers.
+We know that the errors are small (about 0.1).
+ However, as the errors are getting bigger, the L1 norm method can be better,
+ because it would be less likely to be affected by the outliers.
  If there are several solutions that can minimize the error equally well,
  we can see it in the error map produced by the direct search method, and
  can choose one solution based on some priori information.
