--- a/HW2/hw2_solutions.lyx
+++ b/HW2/hw2_solutions.lyx
@@ -106,7 +106,7 @@ For least square problem, we introduce the objective function:
 \begin_layout Standard
 \begin_inset Formula 
 \[
-\phi=(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})=\underset{}{\overset{n}{\underset{i=1}{\sum}}(\frac{Pz_{s}}{[(x_{s}-x_{i})^{2}+(y_{s}-y_{i})^{2}+z_{s}^{2}]^{3/2}}-d_{i})^{2}}
+\phi=(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})=\underset{}{\overset{n}{\underset{i=1}{\frac{1}{2}\sum}}(\frac{Pz_{s}}{[(x_{s}-x_{i})^{2}+(y_{s}-y_{i})^{2}+z_{s}^{2}]^{3/2}}-d_{i})^{2}}
 \]
 
 \end_inset
@@ -186,7 +186,7 @@ We write the Jacobian matrix:
 \begin_layout Standard
 \begin_inset Formula 
 \[
-\boldsymbol{\nabla_{m}}\phi=2(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}\boldsymbol{J}=[\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}lx_{i}}{R_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}ly_{i}}{R_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{PR_{i}-3Pz_{s}^{2}}{R_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{z_{s}}{R_{i}^{3/2}})]^{T}
+\boldsymbol{\nabla_{m}}\phi=(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}\boldsymbol{J}=[\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}lx_{i}}{R_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}ly_{i}}{R_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{PR_{i}-3Pz_{s}^{2}}{R_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{R_{i}^{3/2}}-d_{i})(\frac{z_{s}}{R_{i}^{3/2}})]^{T}
 \]
 
 \end_inset
@@ -197,7 +197,7 @@ We write the Jacobian matrix:
 \begin_layout Standard
 \begin_inset Formula 
 \[
-\boldsymbol{H}(\phi)=\boldsymbol{\nabla_{m}}(\boldsymbol{\nabla_{m}}\phi)=2\nabla(\boldsymbol{J}^{T}(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d}))=2J^{T}J+2(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}\boldsymbol{\nabla J}
+\boldsymbol{H}(\phi)=\boldsymbol{\nabla_{m}}(\boldsymbol{\nabla_{m}}\phi)=\nabla(\boldsymbol{J}^{T}(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d}))=\boldsymbol{J}^{T}\boldsymbol{J}+(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}\boldsymbol{\nabla J}
 \]
 
 \end_inset
@@ -208,7 +208,7 @@ We write the Jacobian matrix:
 \begin_layout Standard
 \begin_inset Formula 
 \[
-H_{approximate}=2\boldsymbol{J}^{T}\boldsymbol{J}
+H_{approximate}=\boldsymbol{J}^{T}\boldsymbol{J}
 \]
 
 \end_inset
@@ -219,11 +219,28 @@ H_{approximate}=2\boldsymbol{J}^{T}\boldsymbol{J}
 \begin_layout Standard
 \begin_inset Formula 
 \[
-2(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}\boldsymbol{\nabla J}=\underset{i=1}{\overset{n}{\sum}}\frac{A_{i}}{R_{i}^{7/2}}\begin{bmatrix}15Pz_{s}lx_{i}^{2}-3Pz_{s}R_{i} & 15Pz_{s}lx_{i}ly_{i} & 3Plx_{i}R_{i}-15Pz_{s}^{2}lx_{i} & 3z_{s}lx_{i}R_{i}\\
+(\boldsymbol{G}(\boldsymbol{m})-\boldsymbol{d})^{T}\boldsymbol{\nabla J}=\underset{i=1}{\overset{n}{\sum}}\frac{A_{i}}{2R_{i}^{7/2}}\begin{bmatrix}15Pz_{s}lx_{i}^{2}-3Pz_{s}R_{i} & 15Pz_{s}lx_{i}ly_{i} & 3Plx_{i}R_{i}-15Pz_{s}^{2}lx_{i} & 3z_{s}lx_{i}R_{i}\\
  & 15Pz_{s}ly_{i}^{2}-3Pz_{s}R_{i} & 3Ply_{i}R_{i}-15Pz_{s}^{2}ly_{i} & 3z_{s}dy_{i}R_{i}\\
 sym &  & 15Pz_{s}^{3}-9Pz_{s}R_{i} & R_{i}^{2}-9z_{s}^{2}R_{i}\\
  &  &  & 0
 \end{bmatrix}
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\[
+\begin{array}{cc}
+H_{xx}=\text{\underset{i}{\sum}}9P^{2}lx_{i}{}^{2}z{}_{s}^{2}R_{i}^{-5}+15lx_{i}^{2}z_{s}A_{i}R_{i}^{-7/2}-3Pz_{s}A_{i}R_{i}^{-5/2} & H_{yy}=\text{\underset{i}{\sum}}9Ply_{i}{}^{2}z{}_{s}^{2}R_{i}^{-5}+15ly_{i}^{2}z_{s}A_{i}R_{i}^{-7/2}-3Pz_{s}A_{i}R_{i}^{-5/2}\\
+H_{zz}=\text{\underset{i}{\sum}}(-6Pz_{s}^{2}R_{i}^{-5/2}+PR_{i}^{-3/2})^{2}+15A_{i}Pz_{s}^{3}R_{i}^{-7/2}-9A_{i}Pz_{s}R_{i}^{-5/2} & H_{pp}=\text{\underset{i}{\sum}}z_{s}^{2}R_{i}^{-3}\\
+H_{xy}=\text{\underset{i}{\sum}}9P^{2}lx_{i}lyz_{i}{}_{s}^{2}R_{i}^{-5}+15lx_{i}ly_{i}z_{s}A_{i}R_{i}^{-7/2} & H_{xz}=\text{\underset{i}{\sum}}3Plx_{i}A_{i}R_{i}^{-5/2}-15Plx_{i}z_{s}^{2}R_{i}^{-7/2}+3Plx_{i}z_{s}R_{i}^{-4}-9P^{2}lx_{i}z_{s}^{3}R_{i}^{-5}\\
+H_{xp}=\text{\underset{i}{\sum}}3Plx_{i}z_{s}^{2}R_{i}^{-4}+3lx_{i}z_{s}A_{i}R_{i}^{-5/2} & H_{yz}=\text{\underset{i}{\sum}}3Ply_{i}A_{i}R_{i}^{-5/2}-15Ply_{i}z_{s}^{2}R_{i}^{-7/2}+3P^{2}ly_{i}z_{s}R_{i}^{-4}-9Plx_{i}ly_{i}z_{s}R^{-5}\\
+H_{yp}=\text{\underset{i}{\sum}}3Ply_{i}z_{s}^{2}R_{i}^{-4}+3ly_{i}z_{s}A_{i}R_{i}^{-5/2} & H_{zp}=\text{\underset{i}{\sum}}-3Pz_{s}^{3}R_{i}^{-4}+P_{i}z_{s}R_{i}^{-3}-3A_{i}z_{s}^{2}R_{i}^{-5/2}+A_{i}R_{i}^{-3/2}
+\end{array}
 \]
 
 \end_inset
