--- a/HW2/hw2_solutions_ma.lyx
+++ b/HW2/hw2_solutions_ma.lyx
@@ -125,7 +125,7 @@ figs-within-sections
 \begin_body
 
 \begin_layout Section*
-Problem 1 (graded by Kangchen Bai) - 50 points+10 bonus points
+Problem 1 (graded by Kangchen) - 50 points+10 bonus points
 \end_layout
 
 \begin_layout Subsection*
