--- a/HW2/hw2_solutions_ma.tex
+++ b/HW2/hw2_solutions_ma.tex
@@ -68,7 +68,7 @@
 \usepackage{babel}
 \begin{document}
 
-\section*{Problem 1 (graded by Kangchen Bai) - 50 points+10 bonus points}
+\section*{Problem 1 (graded by Kangchen) - 50 points+10 bonus points}
 
 
 \subsection*{(a)10 points}
