--- a/HW3/hw3_solutions.lyx
+++ b/HW3/hw3_solutions.lyx
@@ -140,17 +140,17 @@ In a class, among 20 students, 8 are female, and 12 are male.
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $X$
+\begin_inset Formula $x$
 \end_inset
 
-: pick one student, gender is female;
+: pick one student, the gender of the student is female;
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $Y$
+\begin_inset Formula $y$
 \end_inset
 
-: pick one student, taller than 170 cm.
+: pick one student, the student is taller than 170 cm.
 \end_layout
 
 \begin_layout Standard
@@ -158,11 +158,11 @@ Then,
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $P(X,Y)$
+\begin_inset Formula $P(x,y)$
 \end_inset
 
- is the probability that pick one student, he/she is female and is taller
- than 170 cm, which is equal to 
+ is the probability that pick one student, the student is female and is
+ taller than 170 cm, which is equal to 
 \begin_inset Formula $2/20=0.1$
 \end_inset
 
@@ -170,11 +170,11 @@ Then,
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $P(X)$
+\begin_inset Formula $P(x)$
 \end_inset
 
- is the probability that pick one student, he/she is female, which is equal
- to 
+ is the probability that pick one student, the student is female, which
+ is equal to 
 \begin_inset Formula $8/20=0.4$
 \end_inset
 
@@ -182,7 +182,7 @@ Then,
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $P(Y/X)$
+\begin_inset Formula $P(y|x)$
 \end_inset
 
  is the probability that pick one female student, she is taller than 170
@@ -194,11 +194,11 @@ Then,
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $P(Y)$
+\begin_inset Formula $P(y)$
 \end_inset
 
- is the probability that pick one student, he/she is taller than 170 cm,
- which is equal to 
+ is the probability that pick one student, the student is taller than 170
+ cm, which is equal to 
 \begin_inset Formula $(2+8)/20=0.5$
 \end_inset
 
@@ -206,7 +206,7 @@ Then,
 \end_layout
 
 \begin_layout Standard
-\begin_inset Formula $P(X/Y)$
+\begin_inset Formula $P(x|y)$
 \end_inset
 
  is the probability that pick one student who is taller than 170 cm, his/her
@@ -219,6 +219,25 @@ Then,
 \end_inset
 
 Then, we see that:
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $P(x,y)=P(x|y)P(y)=P(y|x)P(x)$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Section*
+(b)
+\end_layout
+
+\begin_layout Standard
+Independent events:
+\end_layout
+
+\begin_layout Standard
+
 \end_layout
 
 \end_body
