--- a/HW2/hw2_solutions_ma.tex
+++ b/HW2/hw2_solutions_ma.tex
@@ -96,13 +96,13 @@ define : \textcolor{blue}{\tiny{}
 
 \textcolor{blue}{\tiny{}
 \[
-lx_{i}=x_{i}-x_{s}
+u_{i}=x_{i}-x_{s}
 \]
  }{\tiny \par}
 
 \textcolor{blue}{\tiny{}
 \[
-ly_{i}=y_{i}-y_{s}
+v_{i}=y_{i}-y_{s}
 \]
 }{\tiny \par}
 
@@ -118,17 +118,17 @@ We write the $\hat{\boldsymbol{G}}$ matrix: \textcolor{blue}{\tiny{}
 \]
  
 \[
-\hat{\boldsymbol{G}}=\begin{bmatrix}\frac{3Pz_{x}lx_{1}}{2\eta_{1}^{5/2}} & \frac{3Pz_{x}ly_{1}}{2\eta_{1}^{5/2}} & \frac{PR_{1}-3Pz_{s}^{2}}{2\eta_{1}^{5/2}} & \frac{z_{s}}{2\eta_{1}^{3/2}}\\
-\frac{3Pz_{x}lx_{2}}{2\eta_{2}^{5/2}} & \frac{3Pz_{x}ly_{2}}{2\eta_{2}^{5/2}} & \frac{PR_{2}-3Pz_{s}^{2}}{2\eta_{2}^{5/2}} & \frac{z_{s}}{2\eta_{2}^{3/2}}\\
+\hat{\boldsymbol{G}}=\begin{bmatrix}\frac{3Pz_{x}u_{1}}{2\eta_{1}^{5/2}} & \frac{3Pz_{x}v_{1}}{2\eta_{1}^{5/2}} & \frac{PR_{1}-3Pz_{s}^{2}}{2\eta_{1}^{5/2}} & \frac{z_{s}}{2\eta_{1}^{3/2}}\\
+\frac{3Pz_{x}u_{2}}{2\eta_{2}^{5/2}} & \frac{3Pz_{x}v_{2}}{2\eta_{2}^{5/2}} & \frac{PR_{2}-3Pz_{s}^{2}}{2\eta_{2}^{5/2}} & \frac{z_{s}}{2\eta_{2}^{3/2}}\\
 ... & ... & ... & ...\\
-\frac{3Pz_{x}lx_{n}}{2\eta_{n}^{5/2}} & \frac{3Pz_{x}ly_{n}}{2\eta_{n}^{5/2}} & \frac{PR_{n}-3Pz_{s}^{2}}{2\eta_{n}^{5/2}} & \frac{z_{s}}{2\eta_{n}^{3/2}}
+\frac{3Pz_{x}u_{n}}{2\eta_{n}^{5/2}} & \frac{3Pz_{x}v_{n}}{2\eta_{n}^{5/2}} & \frac{PR_{n}-3Pz_{s}^{2}}{2\eta_{n}^{5/2}} & \frac{z_{s}}{2\eta_{n}^{3/2}}
 \end{bmatrix}
 \]
 }{\tiny \par}
 
 \textcolor{blue}{\tiny{}
 \[
-\boldsymbol{\nabla_{m}}F=(\boldsymbol{d-g}(\boldsymbol{m}))^{T}\hat{\boldsymbol{G}}=[\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}lx_{i}}{\eta_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}ly_{i}}{\eta_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{PR_{i}-3Pz_{s}^{2}}{\eta_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{z_{s}}{\eta_{i}^{3/2}})]^{T}
+\boldsymbol{\nabla_{m}}F=(\boldsymbol{d-g}(\boldsymbol{m}))^{T}\hat{\boldsymbol{G}}=[\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}u_{i}}{\eta_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}(}\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{3Pz_{x}ly_{i}}{\eta_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{PR_{i}-3Pz_{s}^{2}}{\eta_{i}^{5/2}}),\underset{i=1}{\overset{n}{\sum}}(\frac{Pz_{s}}{\eta_{i}^{3/2}}-d_{i})(\frac{z_{s}}{\eta_{i}^{3/2}})]^{T}
 \]
 }{\tiny \par}
 
@@ -146,8 +146,8 @@ We write the $\hat{\boldsymbol{G}}$ matrix: \textcolor{blue}{\tiny{}
 
 \textcolor{blue}{\tiny{}
 \[
-(\boldsymbol{d}-\boldsymbol{g}(\boldsymbol{m}))^{T}\boldsymbol{Q}=\underset{i=1}{\overset{n}{\sum}}\frac{A_{i}}{\eta_{i}7/2}\begin{bmatrix}15Pz_{s}lx_{i}^{2}-3Pz_{s}\eta_{i} & 15Pz_{s}lx_{i}ly_{i} & 3Plx_{i}\eta_{i}-15Pz_{s}^{2}lx_{i} & 3z_{s}lx_{i}\eta_{i}\\
- & 15Pz_{s}ly_{i}^{2}-3Pz_{s}\eta_{i} & 3Ply_{i}\eta_{i}-15Pz_{s}^{2}ly_{i} & 3z_{s}dy_{i}\eta_{i}\\
+(\boldsymbol{d}-\boldsymbol{g}(\boldsymbol{m}))^{T}\boldsymbol{Q}=\underset{i=1}{\overset{n}{\sum}}\frac{A_{i}}{\eta_{i}7/2}\begin{bmatrix}15Pz_{s}u_{i}^{2}-3Pz_{s}\eta_{i} & 15Pz_{s}u_{i}v_{i} & 3Pu_{i}\eta_{i}-15Pz_{s}^{2}u_{i} & 3z_{s}u_{i}\eta_{i}\\
+ & 15Pz_{s}v_{i}^{2}-3Pz_{s}\eta_{i} & 3Pv_{i}\eta_{i}-15Pz_{s}^{2}v_{i} & 3z_{s}v_{i}\eta_{i}\\
 sym &  & 15Pz_{s}^{3}-9Pz_{s}\eta_{i} & R_{i}^{2}-9z_{s}^{2}\eta_{i}\\
  &  &  & 0
 \end{bmatrix}
@@ -157,11 +157,11 @@ sym &  & 15Pz_{s}^{3}-9Pz_{s}\eta_{i} & R_{i}^{2}-9z_{s}^{2}\eta_{i}\\
 \textcolor{blue}{\tiny{}
 \[
 \begin{array}{cc}
-H_{xx}=\text{\ensuremath{\underset{i}{\sum}}}9P^{2}lx_{i}{}^{2}z{}_{s}^{2}\eta_{i}^{-5}-15lx_{i}^{2}z_{s}A_{i}\eta_{i}^{-7/2}+3Pz_{s}A_{i}\eta_{i}^{-5/2} & H_{yy}=\text{\ensuremath{\underset{i}{\sum}}}9Ply_{i}{}^{2}z{}_{s}^{2}\eta_{i}^{-5}-15ly_{i}^{2}z_{s}A_{i}\eta_{i}^{-7/2}+3Pz_{s}A_{i}\eta_{i}^{-5/2}\\
+H_{xx}=\text{\ensuremath{\underset{i}{\sum}}}9P^{2}u_{i}{}^{2}z{}_{s}^{2}\eta_{i}^{-5}-15u_{i}^{2}z_{s}A_{i}\eta_{i}^{-7/2}+3Pz_{s}A_{i}\eta_{i}^{-5/2} & H_{yy}=\text{\ensuremath{\underset{i}{\sum}}}9Pv_{i}{}^{2}z{}_{s}^{2}\eta_{i}^{-5}-15v_{i}^{2}z_{s}A_{i}\eta_{i}^{-7/2}+3Pz_{s}A_{i}\eta_{i}^{-5/2}\\
 H_{zz}=\text{\ensuremath{\underset{i}{\sum}}}(-6Pz_{s}^{2}\eta_{i}^{-5/2}+P\eta_{i}^{-3/2})^{2}-15A_{i}Pz_{s}^{3}\eta_{i}^{-7/2}+9A_{i}Pz_{s}\eta_{i}^{-5/2} & H_{pp}=\text{\ensuremath{\underset{i}{\sum}}}z_{s}^{2}\eta_{i}^{-3}\\
-H_{xy}=\text{\ensuremath{\underset{i}{\sum}}}9P^{2}lx_{i}lyz_{i}{}_{s}^{2}\eta_{i}^{-5}-15lx_{i}ly_{i}z_{s}A_{i}\eta_{i}^{-7/2} & H_{xz}=\text{\ensuremath{\underset{i}{\sum}}}-3Plx_{i}A_{i}\eta_{i}^{-5/2}-15Plx_{i}z_{s}^{2}\eta_{i}^{-7/2}+3Plx_{i}z_{s}\eta_{i}^{-4}-9P^{2}lx_{i}z_{s}^{3}\eta_{i}^{-5}\\
-H_{xp}=\text{\ensuremath{\underset{i}{\sum}}}3Plx_{i}z_{s}^{2}\eta_{i}^{-4}-3lx_{i}z_{s}A_{i}\eta_{i}^{-5/2} & H_{yz}=\text{\ensuremath{\underset{i}{\sum-}}}3Ply_{i}A_{i}\eta_{i}^{-5/2}-15Ply_{i}z_{s}^{2}\eta_{i}^{-7/2}+3P^{2}ly_{i}z_{s}\eta_{i}^{-4}-9Plx_{i}ly_{i}z_{s}\eta_{i}^{-5}\\
-H_{yp}=\text{\ensuremath{\underset{i}{\sum}}}3Ply_{i}z_{s}^{2}\eta_{i}^{-4}-3ly_{i}z_{s}A_{i}\eta_{i}^{-5/2} & H_{zp}=\text{\ensuremath{\underset{i}{\sum}}}-3Pz_{s}^{3}\eta_{i}^{-4}+P_{i}z_{s}\eta_{i}^{-3}+3A_{i}z_{s}^{2}\eta_{i}^{-5/2}-A\eta_{i}^{-3/2}
+H_{xy}=\text{\ensuremath{\underset{i}{\sum}}}9P^{2}u_{i}v_{i}z_{i}{}_{s}^{2}\eta_{i}^{-5}-15u_{i}v_{i}z_{s}A_{i}\eta_{i}^{-7/2} & H_{xz}=\text{\ensuremath{\underset{i}{\sum}}}-3Pu_{i}A_{i}\eta_{i}^{-5/2}-15Puz_{s}^{2}\eta_{i}^{-7/2}+3Puz_{s}\eta_{i}^{-4}-9P^{2}uz_{s}^{3}\eta_{i}^{-5}\\
+H_{xp}=\text{\ensuremath{\underset{i}{\sum}}}3Pu_{i}z_{s}^{2}\eta_{i}^{-4}-3u_{i}z_{s}A_{i}\eta_{i}^{-5/2} & H_{yz}=\text{\ensuremath{\underset{i}{\sum-}}}3Pv_{i}A_{i}\eta_{i}^{-5/2}-15Pv_{i}z_{s}^{2}\eta_{i}^{-7/2}+3P^{2}v_{i}z_{s}\eta_{i}^{-4}-9Pu_{i}v_{i}z\eta_{i}^{-5}\\
+H_{yp}=\text{\ensuremath{\underset{i}{\sum}}}3Pv_{i}z\eta_{i}^{-4}-3v_{i}z_{s}A_{i}\eta_{i}^{-5/2} & H_{zp}=\text{\ensuremath{\underset{i}{\sum}}}-3Pz_{s}^{3}\eta_{i}^{-4}+P_{i}z_{s}\eta_{i}^{-3}+3A_{i}z_{s}^{2}\eta_{i}^{-5/2}-A\eta_{i}^{-3/2}
 \end{array}
 \]
 }{\tiny \par}
